# parallel-edge-detection

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gray_image.cpp  gray_image.h  main.cpp
src/: gray_image.cpp  gray_image.h  main.cpp  test.cpp  test_program
src/canny/: canny.h  canny_cuda.cu  canny_mpi.cpp  canny_omp.cpp  canny_seq.cpp
src/sobel/: demo  demo.cpp  sobel.cu  sobel.h  sobel_cuda.cu  sobel_mpi.cpp  sobel_omp.cpp  sobel_program  sobel_seq.cpp
